[gd_scene load_steps=6 format=3 uid="uid://cpnkoy7e432s8"]

[ext_resource type="Script" uid="uid://dwyk54dyfdl4d" path="res://scripts/pause_menu.gd" id="1_3mybc"]
[ext_resource type="Theme" uid="uid://mbsg4xqnedxi" path="res://assest/themes/FlatUI4/kenneyUI-red.tres" id="1_57h85"]
[ext_resource type="Shader" uid="uid://co1i3pm4tkekn" path="res://scene/PauseMenu.gdshader" id="2_40tpd"]
[ext_resource type="PackedScene" uid="uid://b8mdst0n7oq5k" path="res://scene/OptionsMenu.tscn" id="3_76k2e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tshm5"]
shader = ExtResource("2_40tpd")
shader_parameter/amount = 1.0

[node name="PauseMenu" type="CanvasLayer"]
layer = 11
script = ExtResource("1_3mybc")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_tshm5")
offset_left = -962.0
offset_top = -535.0
offset_right = 2101.0
offset_bottom = 1260.0
color = Color(0, 0, 0, 0.490196)

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.5
offset_top = -110.0
offset_right = 129.5
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Panel"]
layout_mode = 0
offset_right = 260.0
offset_bottom = 226.0
color = Color(0.803922, 0.984314, 0.117647, 0.862745)

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.5
offset_top = -78.0
offset_right = 100.5
offset_bottom = 78.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_57h85")
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Pause"
horizontal_alignment = 1

[node name="Voltar" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("1_57h85")
text = "voltar pro jogo"

[node name="Opções" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("1_57h85")
text = "OPÇÕES"

[node name="Sair" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("1_57h85")
text = "Sair"

[node name="OptionsMenu" parent="." instance=ExtResource("3_76k2e")]

[connection signal="pressed" from="Panel/VBoxContainer/Voltar" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Opções" to="." method="_on_opções_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Sair" to="." method="_on_sair_pressed"]
